--- a/wpf-tmca/View/UserControls/Statusbar.xaml
+++ b/wpf-tmca/View/UserControls/Statusbar.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <StatusBar BorderBrush="Black" BorderThickness="0,0.3,0,0">
-        <TextBlock Text="{Binding AddStatusBarText}" HorizontalAlignment="Center"/>
+        <TextBlock Text="{Binding StatusBarMsg}" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </StatusBar>
 </UserControl>
